--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-15 00:44:39
+lastsearch = 2024-07-15 01:31:39
 
 [changagoidemsonghong.com]
-match = 37.0%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = 22.2%%
+title = Chăn ga gối Urban cao cấp mã UC22-016
+url = https://changagoidemsonghong.com/chan-ga-goi-uc016
 
 [demhong.vn]
 match = 11.1%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối úc cotton 16
 url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 
 [runa.vn]
-match = 37.0%%
-title = Bộ Chăn Gối Cotton Jersey Blue
-url = https://runa.vn/bo-chan-goi-cotton-jersey-blue
+match = 33.3%%
+title = Bộ Chăn Ga Gối Satin Cotton Màu Chocolate
+url = https://runa.vn/bo-chan-ga-goi-satin-cotton-mau-beige
 
 [songhonghanoi.vn]
 match = 11.1%%
