--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-15 00:52:40
+lastsearch = 2024-07-15 02:01:30
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -217.6%%
-title = If I already live in a neighborhood, and HOA tries to claim it ...
-url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
+match = -176.5%%
+title = Can my HOA fine me if they haven't explained what I've ...
+url = https://www.quora.com/Can-my-HOA-fine-me-if-they-haven-t-explained-what-I-ve-done-wrong-They-sent-me-a-picture-2-weeks-ago-of-my-property-with-zero-context-or-explanation-of-what-s-wrong-Today-I-received-a-fine-Again-with-zero
 
 [www.hopb.co]
 match = -141.2%%
@@ -360,4 +360,19 @@ url = https://www.legis.iowa.gov/DOCS/GA/79GA/Legislation/HF/02400/HF02442/Curre
 match = -82.4%%
 title = "Beautiful flower" on top of Giang Man
 url = https://www.vietnam.vn/en/bong-hoa-dep-tren-dinh-giang-man/
+
+[ftp.leesburgflorida.gov]
+match = -76.5%%
+title = DRC Comments MJSB-21-14 - Tara Oaks
+url = ftp://ftp.leesburgflorida.gov/Community Development/Tara Oaks/MJSB-21-14 Tara Oaks - NW  150 SFR/DRC Comments/2021-03-24 Tara Oaks MJSB-21-14 DRC Comments.pdf
+
+[www.bls.gov]
+match = -23.5%%
+title = Bureau of Labor Statistics
+url = https://www.bls.gov/
+
+[www.appliedmaterials.com]
+match = 0.0%%
+title = United States - Home
+url = https://www.appliedmaterials.com/us/en.html
 
