--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-15 02:13:12
+lastsearch = 2024-07-15 02:26:01
 
 [changagoidemsonghong.com]
-match = 7.4%%
-title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
-url = https://changagoidemsonghong.com/chan-ga-goi-bc16
+match = 18.5%%
+title = chăn ga gối cotton cao cấp Archives
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-cao-cap
 
 [demhong.vn]
 match = 11.1%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -18.5%%
-title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
-url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
+match = -11.1%%
+title = Bộ chăn ga 100%% Cotton Sateen - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-sateen
 
 [khodemgiagoc.com]
 match = -37.0%%
