--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-14 14:46:51
+lastsearch = 2024-07-15 02:26:12
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -13.3%%
-title = Grand Loyal Poker Club
-url = https://www.facebook.com/GrandLoyal/
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -385,4 +385,9 @@ url = http://dhannd.edu.vn/tuoi-tre-truong-dai-hoc-an-ninh-nhan-dan-to-chuc-sinh
 match = -186.7%%
 title = DANH SÁCH ĐIỂM TIÊM VẮC-XIN PHÒNG COVID-19 NGÀY 09/ ...
 url = https://hcdc.vn/danh-sach-diem-tiem-vacxin-phong-covid19-ngay-0932023-ca5d0419c493b7d0fa38af9663f5fcdc.html
+
+[bida123.vn]
+match = -73.3%%
+title = Cơ Mezz EC9-D2 ngọn WX-Σ (Sigma)
+url = https://bida123.vn/product/co-mezz-ec9-d2/
 
