--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-15 00:19:44
+lastsearch = 2024-07-15 02:25:39
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = -18.8%%
-title = Chiếu lác thiên nhiên : 1m6 .1m8
-url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
+match = -212.5%%
+title = Đồ chơi treo nôi cũi cho bé sơ sinh phát nhạc tự xoay, có ...
+url = https://shopee.vn/Đồ-chơi-treo-nôi-cũi-cho-bé-sơ-sinh-phát-nhạc-tự-xoay-có-đèn-chiếu-hình-lục-lạc-gặm-nướu-điều-khiển-từ-xa-đa-năng-i.256186540.22038728340
 
 [www.thegioididong.com]
 match = -193.8%%
@@ -122,9 +122,9 @@ title = Con lắc đơn chiều dài l = 0,5 (m), m = 100 gam dao động ở ..
 url = https://moon.vn/hoi-dap/con-lac-don-chieu-dai-l-05-m-m-100-gam-dao-dong-o-noi-co-g-98-ms2-voi-bien-do-goc-ba-679117
 
 [m.facebook.com]
-match = -218.8%%
-title = Hà Nội Riviu - Riviu.vn | Tuần nào mà k lên đâu gặm gà là ...
-url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1455752271755171/
+match = -225.0%%
+title = GAM Esports LoL - GAM 0 - 2 TS Thất bại đầu tiên của mùa ...
+url = https://m.facebook.com/GAMeSportsVN/photos/gam-0-2-tsthất-bại-đầu-tiên-của-mùa-giảigamtime-riseasone-decadeofdominance/889965069836877/
 
 [dangcongsan.vn]
 match = -231.2%%
