--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-14 23:17:15
+lastsearch = 2024-07-15 02:29:03
 
 [scholar.google.com]
 match = -43.8%%
@@ -117,9 +117,9 @@ title = THUẬN PHÁO MAI HOA TUYỀN PHÁ HOÀNH XE TẬP 18
 url = https://www.youtube.com/watch?v=5tAzMm3oK7w
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHaaHQ3jse&sig=ACfU3U0-cEkq_6O9omjl0EeL6U5_LQmDdA&hl=en&sa=X&ved=2ahUKEwjp9_mp_qWHAxVCk4kEHXZKC9sQ6AF6BAgcEAM
+match = -87.5%%
+title = NCĐT số 774: Lạc Lối Trong Mạng Xã Hội
+url = https://books.google.com/books?id=TQpuEAAAQBAJ&pg=PA6&lpg=PA6&dq=chieu+lac+soc+18&source=bl&ots=HENO0Z22Vy&sig=ACfU3U1C826-_uPRLpIAi1Gx35QiWLdHqw&hl=en&sa=X&ved=2ahUKEwi2vcCAoqeHAxWNMlkFHd9LCXwQ6AF6BAgZEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
