--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-14 23:54:20
+lastsearch = 2024-07-15 03:33:59
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -27,9 +27,9 @@ title = Chỉ thị 10/CT-UBND 2021 chấn chỉnh tăng cường quản lý ...
 url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-chan-chinh-tang-cuong-quan-ly-nha-nuoc-ve-dat-dai-tinh-Thai-Binh-483501.aspx
 
 [sotuphap.thaibinh.gov.vn]
-match = -47.8%%
-title = sO ill PHAP THAI BINH TRUNG TAM DVDG TAI sAN ...
-url = https://sotuphap.thaibinh.gov.vn/upload/80609/20220310/TBNY_so_08_Hd07-2022_cua_Cuc_Quan_ly_thi_truong_tinh_Thai_Binh_ff927.pdf
+match = 17.4%%
+title = THÔNG BAO DAU GIA TAI SAN Qn 10)
+url = https://sotuphap.thaibinh.gov.vn/upload/80609/20220927/TBNY_so_16_10_Hd13-2022_cua_Ngan_hang_NN_PTNT_Viet_Nam_chi_nhanh_huyen_Tien_Hai_Thai_Binh__lan_10__94ebf.pdf
 
 [www.youtube.com]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -104.3%%
-title = A Household Atlas of the World: Containing Large Scale ...
-url = https://books.google.com/books?id=ne8wAQAAMAAJ&pg=PA138&lpg=PA138&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=-8w16wSA-t&sig=ACfU3U3iVZvv7mH7SDl7jixPxIMg5KdAVw&hl=en&sa=X&ved=2ahUKEwjljJW2_6aHAxVrEFkFHSEvCWYQ6AF6BAgcEAM
+match = -139.1%%
+title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
+url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz0XkgaUB&sig=ACfU3U0xNXqlM-xlx0phEUnXWtgkgHbARQ&hl=en&sa=X&ved=2ahUKEwiC6Z7CsKeHAxX4M1kFHV5oAdQQ6AF6BAgeEAM
 
 [www.travelweekly.com]
 match = -87.0%%
@@ -122,8 +122,8 @@ title = Trường Đại học Y Dược Thái Bình
 url = https://tbump.edu.vn/
 
 [www.reddit.com]
-match = -21.7%%
-title = How to pronounce Thai Binh. : r/Vietnamese
+match = 30.4%%
+title = How to pronounce Thai Binh.
 url = https://www.reddit.com/r/Vietnamese/comments/1d5d9f4/how_to_pronounce_thai_binh/
 
 [www.macom.com]
