--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-15 03:18:00
+lastsearch = 2024-07-15 03:32:20
 
 [www.youtube.com]
-match = -110.0%%
-title = KÊNH VTC16
-url = https://www.youtube.com/channel/UCZnhEIF8a5Uv4GMPwT6KafQ
+match = -48.0%%
+title = Đài Loan Tung Chiêu Bóp Nghẹt Dã Tâm Của Trung Quốc
+url = https://www.youtube.com/watch?v=0--4nk6XRjE
 
 [www.voatiengviet.com]
 match = -68.0%%
@@ -370,4 +370,14 @@ url = https://www.ysgolbroingli.com/
 match = 0.0%%
 title = sitemaps-2011-10-16-20.xml
 url = https://nld.com.vn/sitemaps/sitemaps-2011-10-16-20.xml
+
+[www.vn.kayak.com]
+match = -56.0%%
+title = Chuyến bay giá rẻ từ Đài Loan đến Hồ Chí Minh, từ mức ...
+url = https://www.vn.kayak.com/flight-routes/ai-Loan-TW0/TP-Ho-Chi-Minh-Ho-Chi-Minh-City-SGN
+
+[doanthanhnien.vn]
+match = -60.0%%
+title = Bí thư T.Ư Đoàn gặp mặt đoàn đại biểu tham dự chương ...
+url = https://doanthanhnien.vn/tin-tuc/doi-tntp-ho-chi-minh/bi-thu-t-u-doan-gap-mat-doan-dai-bieu-tham-du-chuong-trinh-giao-luu-thieu-nhi-viet---trung-nam-2024
 
