--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-14 23:55:37
+lastsearch = 2024-07-15 03:29:27
 
 [everonvn.com.vn]
-match = -61.9%%
-title = Bảng giá bán lẻ Ga chun Everon Ep1834 - Rose
-url = https://everonvn.com.vn/everon/704/ga-chun-everon-ep1834-rose
+match = -133.3%%
+title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -66.7%%
-title = Ga phủ EPM19043 180x200 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
+match = -9.5%%
+title = Everon Quảng Bình Ga phủ EPC19056 160x200
+url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -95.2%%
-title = Giảm giá Bộ chăn ga gối phủ trần bông 7 món satin
-url = https://muathongminh.vn/bo-chan-ga-goi-phu-tran-bong-7-mon-satin-p.1__7848970894__300618428
+match = -119.0%%
+title = [Giảm 140.000 ₫] Chăn ga gối lụa thêu 100s “ kid luxury “
+url = https://muathongminh.vn/set-chan-ga-goi-phu-cotton-satin-p.1__5332956396__244837248
 
 [beecost.vn]
 match = -61.9%%
