--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-15 02:01:30
+lastsearch = 2024-07-15 03:31:14
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Do HOAs have to report beneficial ownership under the ...
 url = https://www.nixonpeabody.com/insights/alerts/2024/05/08/do-hoas-have-to-report-beneficial-ownership-under-the-cta
 
 [www.flsenate.gov]
-match = -129.4%%
-title = Chapter 720 Section 303 - 2018 Florida Statutes
-url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
+match = -147.1%%
+title = CS/CS/HB 919 Homeowners' Associations SPONSOR(S)
+url = https://www.flsenate.gov/Session/Bill/2023/919/Analyses/h0919z1.RRS.PDF
 
 [www.doorloop.com]
 match = 0.0%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -176.5%%
-title = Can my HOA fine me if they haven't explained what I've ...
-url = https://www.quora.com/Can-my-HOA-fine-me-if-they-haven-t-explained-what-I-ve-done-wrong-They-sent-me-a-picture-2-weeks-ago-of-my-property-with-zero-context-or-explanation-of-what-s-wrong-Today-I-received-a-fine-Again-with-zero
+match = -217.6%%
+title = If I already live in a neighborhood, and HOA tries to claim it ...
+url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
 
 [www.hopb.co]
 match = -141.2%%
