--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-15 03:17:15
+lastsearch = 2024-07-15 03:32:33
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -17,9 +17,9 @@ title = Fabiana Justus (@fabianajustus)
 url = https://www.instagram.com/fabianajustus/?hl=en
 
 [www.reddit.com]
-match = -50.0%%
-title = Riot is cutting back budget on esports?
-url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
+match = -15.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
 match = -33.3%%
@@ -134,7 +134,7 @@ url = https://wildrift.leagueoflegends.com/en-us/
 [books.google.com]
 match = -135.0%%
 title = The Japan Daily Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek3nxMnT&sig=ACfU3U0pItLrMY_7ugbnIYkZCK-BBsL6Gg&hl=en&sa=X&ved=2ahUKEwjHhN2RoKaHAxXAFlkFHX_QDnsQ6AF6BAgeEAM
+url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek3qGJkU&sig=ACfU3U2VK7DYj1uApkjy04oh--IvBZ8tww&hl=en&sa=X&ved=2ahUKEwiDvbaZsKeHAxUnEVkFHSOkBukQ6AF6BAgzEAM
 
 [thehill.com]
 match = -105.0%%
