--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-15 02:32:33
+lastsearch = 2024-07-15 03:48:54
 
 [demxanh.com]
-match = -3.6%%
-title = Bộ ga chun Cotton chống thấm màu ghi nhạt
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
+match = -42.9%%
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 17
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-17.html
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+match = 25.0%%
+title = Ga phủ ESM20013 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -147,14 +147,14 @@ title = Andrea schmider facebook [t8zAms] - external-link - Kvaser
 url = https://www.kvaser.cn/en/external-link/?url=https://detsad147vrn.ru/m7kv6ocwwwnurcecombramafe85
 
 [www.staleyfarmshomeskc.com]
-match = -60.7%%
-title = News Staley Farms Private Golf Community Kansas City MO
-url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
+match = -92.9%%
+title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
+url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--80afptqn.xn--p1ai/5392784wwwsp47euorgc4fe43y
 
 [www.lebguide.com]
-match = 3.6%%
-title = Hotels in Lebanon - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1aadcebcueff0c6d7d.xn--p1ai/6879521dpafbso02-04tpay8comc4fe43y
+match = -32.1%%
+title = David sylvian height [PtU3HD] - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1axcfdv.xn--p1ai/25681974moyanwxcomv4fe36a
 
 [news.google.it]
 match = -3.6%%
