--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-15 03:18:55
+lastsearch = 2024-07-15 03:45:35
 
 [demdreamland.vn]
 match = 29.7%%
@@ -27,14 +27,14 @@ title = Đệm cao su Xuất Khẩu - 10cm
 url = http://dreamland.vn/Dem-cao-su-Xuat-Khau---10cm-i4418.html
 
 [demviethome.vn]
-match = 7.0%%
-title = Đệm cao su Kim Cương princess diamond luxury giá rẻ hà ...
-url = https://demviethome.vn/dem-cao-su-kim-cuong-princess-diamond-luxury/
+match = 30.2%%
+title = Đệm bông ép Dreamland giá rẻ tốt nhất tại Hà Nội
+url = https://demviethome.vn/dem-bong-ep-dreamland/
 
 [thegioidemdep.com]
-match = 7.0%%
-title = Mua Nệm cao su kim cương Princess Gold Cao Cấp Sale ...
-url = https://thegioidemdep.com/dem-cao-su-thien-nhien-kim-cuong-xuat-khau-princess-gold/
+match = -4.7%%
+title = Bảng Giá & Top 50+ Đệm bông ép Dreamland chính hãng ...
+url = https://thegioidemdep.com/dem-bong-ep-dreamland/
 
 [chandemsadora.com]
 match = -9.7%%
